[metadata]
name = rustiql
version = file: VERSION
url = https://github.com/pyrustic/rustiql
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Graphical SQL Editor for Pyrustic
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    pyrustic
    graphical-sql-editor
    desktop-application
    tkinter
    lightweight
    gui
    application
    sql
    sqlite
    database
    app
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    tkf

[options.entry_points]
console_scripts =
    rustiql = rustiql.__main__:main
